fix overflow issue

--- a/_alert.scss
+++ b/_alert.scss
@@ -1,6 +1,5 @@
 .alert {
   $transition: all 300ms ease;
-  overflow: hidden;
 
   > *:first-child {
     margin-top: 0;
@@ -15,6 +14,7 @@
     padding-top: 0;
     padding-bottom: 0;
     border-width: 0;
+    opacity: 0;
 
     &.slide-down-enter-active {
       transition: $transition;
@@ -22,6 +22,7 @@
       padding-top: $alert-padding-y;
       padding-bottom: $alert-padding-y;
       border-width: 1px;
+      opacity: 1;
     }
   }
 
@@ -30,6 +31,7 @@
     padding-top: $alert-padding-y;
     padding-bottom: $alert-padding-y;
     border-width: 1px;
+    opacity: 1;
 
     &.slide-down-leave-active {
       max-height: 0;
@@ -37,6 +39,7 @@
       padding-bottom: 0;
       border-width: 0;
       transition: $transition;
+      opacity: 0;
     }
   }
 }
